# TinyRayTracing

./: CMakeLists.txt  README.md  main.cpp
Core/: BVH.cpp  BVH.h  Bound.cpp  Bound.h  Camera.cpp  Camera.h  Color.h  Intersection.h  Light.h  Material.cpp  Material.h  Math.h  Object.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Scene.h  Sphere.h  TriangleMesh.cpp  TriangleMesh.h
